[tool.poetry]
name = "simple-pymq"
version = "0.2.0"
description = "Simple python message queue framework is ready to serve."
authors = ["Allen Chou <f1470891079@gmail.com>"]
readme = "README.md"
packages = [{include = "simple_pymq"}]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.11.0"
rich = "*"
pytz = "*"
aiofiles = {version = "*", extras = ["fs"]}
croniter = {version = "*", extras = ["cron"]}

[tool.poetry.group.dev.dependencies]
black = "*"
flake8 = "*"
flake9 = "*"
pytest = "*"
pytest-asyncio = "*"
yapf = "*"

[tool.poetry.extras]
all = ["aiofiles", "croniter",]
cron = ["croniter",]
fs = ["aiofiles",]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
