[tool.poetry]
name = "simple-pymq"
version = "0.3.0"
description = "Simple python message queue framework is ready to serve."
authors = ["Allen Chou <f1470891079@gmail.com>"]
readme = "README.md"
packages = [{include = "simple_pymq"}]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.11.0"
rich = "*"
pytz = "*"
aiofiles = {version = "*", extras = ["fs"]}
croniter = {version = "*", extras = ["cron"]}
redis = {version = ">=4.2.*", extras = ["redis"]}
pika = {version = "*", extras = ["amqp"]}
pyassorted = {version = "*", extras = ["amqp"]}

[tool.poetry.group.dev.dependencies]
black = "*"
flake8 = "*"
flake9 = "*"
pytest = "*"
pytest-asyncio = "*"
yapf = "*"

[tool.poetry.extras]
all = ["aiofiles", "croniter", "pika", "redis",]
cron = ["croniter",]
fs = ["aiofiles",]
amqp = ["pika",]

[tool.pytest.ini_options]
log_cli = false
log_cli_level = "INFO"
log_file = "log/test.log"
log_file_level = "DEBUG"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
